# RadarZ

./: README.md  main.py  pyproject.toml  start.bat
backend/: .env.example  .gitignore  README.md  daily_push.py  main.py  pyproject.toml  subscriptions.json
backend/src/: __init__.py  email_service.py  github_client.py  models.py  project_service.py  readme_assistant.py  subscription_manager.py  test.py  user_profile.py
backend/src/React/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py
backend/src/agent/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py  state.py
backend/src/github/: __init__.py  github_client.py  project_service.py
backend/src/searchagent/: graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/explore/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: AIAssistant.tsx  CenterContent.tsx  ExampleSearches.tsx  ExploreProjects.tsx  LeftSidebar.tsx  MainLayout.tsx  ProjectCard.tsx  ProjectCardSkeleton.tsx  ProjectViewer.tsx  RightSidebar.tsx  SearchBar.tsx  SearchContainer.tsx  SearchResults.tsx  Summary.tsx  WorkingFlow.tsx
frontend/components/layout/: BottomSearchBar.tsx  CenterContent.tsx  LeftSidebar.tsx  RightSidebar.tsx
frontend/components/project/: AIAssistant.tsx  ProjectViewer.tsx  Summary.tsx
frontend/data/: mockProjects.ts
frontend/hooks/: useSearch.ts
frontend/lib/: config.ts
frontend/src/: App.tsx
src/: __init__.py  ai_recommender.py  github_client.py
(+2 files in other folders)
